ghc-4335c07/testsuite/tests/rename/should_fail/T12879.hs
{-# LANGUAGE TypeApplications #-}
module ShouldFail where

f x = x@x
