ghc-4335c07/testsuite/tests/rename/should_fail/T12879.stderr

T12879.hs:4:7: error:
    Pattern syntax in expression context: x@x
    Type application syntax requires a space before '@'
